# teambook

./: .gitignore  Makefile  README.md  header.tmp  outline.md  todo.md
.github/workflows/: compile_pdf.yml
content/: teambook.tex
content/FFT/: berlekamp_massey.cpp  chapter.tex  fft.cpp
content/Flows/: dinitz.cpp  mcmf.cpp
content/Misc/: frac_bs.cpp  integrate.cpp
content/NumberTheory/: crt.cpp  exgcd.cpp  pollard_rho.cpp
content/Strings/: aho_corasick.cpp
content/combinatorics/: chapter.tex
content/contest/: CMakeLists.txt  chapter.tex
content/data structures/: chapter.tex  cht.cpp  link-cut.cpp  link_cut.cpp  splay.cpp
content/example/: chapter.tex  example.cpp
content/flows/: chapter.tex  dinitz.cpp  mcmf.cpp  push-relabel.cpp
content/graphs/: DirectedMST.h  DominatorTree.h  MatroidIntersection.h  OldDominatorTree.h  TarjanSCC.h  chapter.tex
content/misc/: chapter.tex  dynamic_bitset.cpp  frac_bs.cpp  integrate.cpp  pbds.cpp
content/number_theory/: barrett.cpp  chapter.tex  crt.cpp  exgcd.cpp  floor_sum.cpp  miller_rabin.cpp  pollard_rho.cpp
content/numerical/: berlekamp_massey.cpp  chapter.tex  fft.cpp  inv.cpp  mult.cpp  walsh-hadamard.cpp
content/strings/: KMP.cpp  aho_corasick.cpp  chapter.tex  eertree.cpp  kmp.cpp  lcp.cpp  linear_suffix_array.cpp  manacher.cpp  min_rotation.cpp  suffix_array.cpp  suffix_automaton.cpp
content/tex/: kactlpkg.sty  preprocessor.py
examples/: cht_kalila_dimna.cpp  link_cut_yosupo.cpp  splay_range_reverse_range_sum.cpp  suffix_automaton_kth_substring.cpp
tests/: run_all.sh
(+2 files in other folders)
